--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,8 @@ edition = "2018"
 [dependencies]
 exitfailure = "0.5.1"
 failure = "0.1.7"
+prost = "0.6.1"
 structopt = "0.3"
+
+[build-dependencies]
+prost-build = "0.6.1"
