--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,18 @@
 language: rust
+cache: cargo
 os:
 - linux
 - osx
+script: cargo build --verbose --release; cargo test --verbose
+after_success:
+  - mv target/release/cds "target/release/cds-${TRAVIS_TAG:-unstable}-$TRAVIS_OS_NAME"
+deploy:
+  - provider: releases
+    skip_cleanup: true
+    on:
+      tags: true
+      branch: master
+    file:
+      - target/release/cds-*
+    api_key:
+      secure: $GITHUB_API_KEY
