--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,4 @@ deploy:
       branch: master
     file:
       - target/release/cds-*
-    api_key:
-      secure: $GITHUB_API_KEY
+    api_key: $GITHUB_API_KEY
