Fix deploy config
Signed-off-by: James Taylor <jamest@uk.ibm.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ deploy:
     on:
       tags: true
       branch: master
+    file_glob: true
     file:
       - target/release/cds-*
     api_key: $GITHUB_API_KEY
