--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,18 @@ os:
 - linux
 - osx
 - windows
-script: cargo build --verbose --release; cargo test --verbose
+before_install: |
+  if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+    sudo apt-get -y install musl-tools
+  fi
+script: |
+  if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+    cargo build --target x86_64-unknown-linux-musl --verbose --release
+    cargo test --target x86_64-unknown-linux-musl --verbose
+  else
+    cargo build --verbose --release
+    cargo test --verbose
+  fi
 after_success:
   - mv target/release/cds "target/release/cds-${TRAVIS_TAG:-unstable}-$TRAVIS_OS_NAME"
 deploy:
